[package]
name = "pittie_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime, only a single threaded runtime is required for a small bot that runs on one server
tokio = { version = "1.0", features = ["macros", "rt"] }
# Discord API related
twilight-gateway = "0.12.1"
twilight-http = "0.12.1"
twilight-model = "0.12.1"
futures = "0.3.21"
# Convenient errors
anyhow = "1"
# Small rng crate for picking a random image
fastrand = "1.8.0"
# Config stuff
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"


[profile.release]
strip = true
lto = true
codegen-units = 1
