[package]
name = "pittie_bot"
version = "0.2.0"
edition = "2021"
authors = ["it0964"]
description = "For getting pictures of your dog on Discord"

[dependencies]
# Async runtime
tokio = { version = "1.20", features = ["macros", "rt"] }
# Discord API wrapper
serenity = { version = "0.11.5", features = ["gateway", "model", "client", "rustls_backend"], default-features = false }
# For the config file
serde = "1.0.144"
serde_json = "1.0.83"
# A rand crate which is faster and smaller than rand
fastrand = "1.8.0"
# For convenient error handling
anyhow = "1.0.62"

[profile.release]
codegen-units = 1
strip = true
lto = true
